# bevy-open-arpg

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  index.html  styles.css
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-wasm-pages.yml
assets/data/: enemies.ron  loot.ron  player.ron
assets/models/: affix_arcane_aura.glb  affix_blood_aura.glb  affix_ember_aura.glb  affix_frost_aura.glb  affix_ward_aura.glb  altar.glb  arcane_impact.glb  armor_break.glb  ashen_pylon.glb  blood_obelisk.glb  blood_spray.glb  bone_fracture_echo.glb  bone_impact.glb  bone_shatter.glb  boss_summon_portal.glb  breakable_coffer.glb  breakable_urn.glb  butcher.glb  chest.glb  crit_bone_crown.glb  crit_burst.glb  cultist.glb  cursed_shrine.glb  desecrator_burst.glb  elite_affix_break.glb  ember_impact.glb  ember_rift_prop.glb  ember_vent.glb  execution_burst.glb  fortune_shrine.glb  frenzy_impact.glb  frost_impact.glb  guard_clash.glb  headshot_burst.glb  healing_well.glb  hero.glb  hit_bone_lock.glb  hit_bone_rune.glb  hit_spark.glb  holy_impact.glb  (+16 more)
docs/: releasing.md
docs/prompts/: bevy-open-arpg-concept.md
pkg/: bevy_open_arpg.d.ts  bevy_open_arpg.js  bevy_open_arpg_bg.wasm.d.ts
scripts/: build_web.sh  release_github.sh  stamp_web_build_id.py
src/: assets.rs  bestiary.rs  bounty.rs  challenge.rs  chapter.rs  combat.rs  companion.rs  data.rs  dungeon.rs  enemy.rs  feedback.rs  journey.rs  loot.rs  lore.rs  main.rs  mastery.rs  milestone.rs  obelisk.rs  ordeal.rs  player.rs  rift.rs  save.rs  story.rs  ui.rs
tests/: asset_manifest.rs
tools/audio/: generate_sfx.py
tools/blender/: README.md  generate_assets.py
web/: index.html
