[package]
name = "bevy-open-arpg"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    # Core desktop ARPG feature profile.
    "default_app",
    "default_platform",
    "3d",
    "3d_bevy_render",
    "ui",
    "ui_bevy_render",
    "audio-all-formats",
    "scene",
    "picking",
    # These are also used directly by the game codepaths, so keep them explicit.
    "bevy_animation",
    "gltf_animation",
    "morph",
    "morph_animation",
    "bevy_input_focus",
    "bevy_ui_widgets",
    "mesh_picking",
    "ui_picking",
    # `3d`/`ui` pull these through `default_platform`; keep them explicit so
    # the native runtime requirements stay visible when auditing Bevy features.
    "bevy_clipboard",
    "default_font",
    "multi_threaded",
    "webgl2",
    "area_light_luts",
    "asset_processor",
    "bevy_remote",
    "bevy_settings",
    "bevy_ui_debug",
    "bluenoise_texture",
    "bmp",
    "custom_cursor",
    "dds",
    "dfg_lut",
    "experimental_pbr_pcss",
    "exr",
    "ff",
    "gamepad",
    "gif",
    "hdr",
    "ico",
    "jpeg",
    "ktx2",
    "pbr_anisotropy_texture",
    "pbr_clustered_decals",
    "pbr_light_textures",
    "pbr_multi_layer_material_textures",
    "pbr_specular_textures",
    "pbr_transmission_textures",
    "pnm",
    "qoi",
    "reflect_documentation",
    "reflect_functions",
    "serialize",
    "shader_format_glsl",
    "shader_format_spirv",
    "shader_format_wesl",
    "smaa_luts",
    "sysinfo_plugin",
    "system_clipboard",
    "system_font_discovery",
    "tga",
    "tiff",
    "tonemapping_luts",
    "wayland",
    "webp",
    "x11",
    "zlib",
    "zstd_rust",
] }
bevy_render = { version = "0.19", default-features = false, features = ["gles"] }
rand = "0.9"
ron = "0.11"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.20.1", default-features = false, features = ["flac", "mp3", "vorbis", "wav"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# rand 0.9 reaches getrandom 0.3, which needs an explicit JS backend on
# wasm32-unknown-unknown (paired with RUSTFLAGS --cfg getrandom_backend="wasm_js"
# in scripts/build_web.sh).
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["native"]
# Bevy integrations that only build on native targets: accesskit_unix drags
# bevy_tasks/async-io (polling/errno hard-error on wasm) and basis-universal
# compiles a C++ transcoder. Web builds use
# `--no-default-features --features webgpu` (see scripts/build_web.sh).
native = [
    "bevy/accesskit_unix",
    "bevy/basis-universal",
    "bevy/compressed_image_saver",
    "bevy/raw_vulkan_init",
]
dev_tools = [
    "bevy/bevy_camera_controller",
    "bevy/bevy_debug_stepping",
    "bevy/debug_glam_assert",
    "bevy/detailed_trace",
    "bevy/dev",
    "bevy/dynamic_linking",
    "bevy/file_watcher",
    "bevy/free_camera",
    "bevy/glam_assert",
    "bevy/schedule_data",
    "bevy/trace",
    "bevy/trace_chrome",
    "bevy/track_location",
    "bevy/type_label_buffers",
]
ci = ["bevy/bevy_ci_testing"]
webgpu = ["bevy/web", "bevy/webgpu", "bevy/web_asset_cache"]

# Sized for the wasm/Pages bundle (mirrors bevy-open-rts). No `strip = true`:
# it removes the wasm `target_features` section and wasm-opt then rejects the
# bulk-memory ops; wasm-opt -Oz already strips the output.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
