[package]
name = "bevy-open-arpg"
version = "0.1.0"
edition = "2024"
description = "A dark-fantasy open action RPG prototype built with Bevy."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/stars-labs/bevy-open-arpg"
repository = "https://github.com/stars-labs/bevy-open-arpg"
documentation = "https://github.com/stars-labs/bevy-open-arpg/blob/main/README.md"
keywords = ["bevy", "arpg", "rpg", "roguelite", "game", "gamedev"]
categories = ["game-engines", "games", "graphics"]

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    # Feature collections from Bevy 0.19 docs.
    "3d",
    "ui",
    "scene",
    "picking",
    "default_app",
    "default_platform",
    "audio-all-formats",
    # Direct Bevy feature flags used by the game code and desired production visual profile.
    "bevy_animation",
    "bevy_input_focus",
    "bevy_ui_widgets",
    "mesh_picking",
    "ui_picking",
    "gltf_animation",
    "morph",
    "morph_animation",
    "asset_processor",
    "bevy_remote",
    "bevy_settings",
    "bevy_ui_debug",
    "bevy_feathers",
    "bevy_render",
    "area_light_luts",
    "bevy_gilrs",
    "bevy_clipboard",
    "default_font",
    "multi_threaded",
    "webgl2",
    "wayland",
    "x11",
    "sysinfo_plugin",
    "custom_cursor",
    "bevy_camera_controller",
    "bluenoise_texture",
    "bmp",
    "dds",
    "dfg_lut",
    "exr",
    "ff",
    "gif",
    "gamepad",
    "hdr",
    "ico",
    "jpeg",
    "ktx2",
    "pnm",
    "png",
    "qoi",
    "reflect_documentation",
    "reflect_functions",
    "serialize",
    "shader_format_glsl",
    "shader_format_spirv",
    "shader_format_wesl",
    "smaa_luts",
    "sprite_picking",
    "system_clipboard",
    "system_font_discovery",
    "tga",
    "tiff",
    "tonemapping_luts",
    "webp",
    "zlib",
    "zstd_rust",
    "experimental_pbr_pcss",
    "pbr_anisotropy_texture",
    "pbr_clustered_decals",
    "pbr_light_textures",
    "pbr_multi_layer_material_textures",
    "pbr_specular_textures",
    "pbr_transmission_textures",
] }
bevy_render = { version = "0.19", default-features = false, features = ["gles"] }
rand = "0.10"
ron = "0.12"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.22.2", default-features = false, features = ["flac", "mp3", "vorbis", "wav"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# rand 0.9 reaches getrandom 0.3, which needs an explicit JS backend on
# wasm32-unknown-unknown (paired with RUSTFLAGS --cfg getrandom_backend="wasm_js"
# in scripts/build_web.sh).
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = ["native"]
# Bevy integrations that only build on native targets: accesskit_unix drags
# bevy_tasks/async-io (polling/errno hard-error on wasm) and basis-universal
# compiles a C++ transcoder. Web builds use
# `--no-default-features --features webgpu` (see scripts/build_web.sh).
native = [
    "bevy/accesskit_unix",
    "bevy/basis-universal",
    "bevy/compressed_image_saver",
    "bevy/raw_vulkan_init",
    # PCSS soft shadows sample the blue-noise texture inside non-uniform
    # control flow, which WGSL rejects ("textureSample must only be called
    # from uniform control flow") — native-only until upstream fixes it.
    "bevy/experimental_pbr_pcss",
    # Each extra StandardMaterial texture adds a fragment-stage sampler; with
    # all six the PBR pipeline needs 24 samplers while WebGPU caps
    # maxSamplersPerShaderStage at 16, so these are native-only.
    "bevy/pbr_anisotropy_texture",
    "bevy/pbr_clustered_decals",
    "bevy/pbr_light_textures",
    "bevy/pbr_multi_layer_material_textures",
    "bevy/pbr_specular_textures",
    "bevy/pbr_transmission_textures",
]
dev_tools = [
    "bevy/bevy_camera_controller",
    "bevy/bevy_debug_stepping",
    "bevy/debug_glam_assert",
    "bevy/detailed_trace",
    "bevy/dev",
    "bevy/dynamic_linking",
    "bevy/file_watcher",
    "bevy/free_camera",
    "bevy/glam_assert",
    "bevy/schedule_data",
    "bevy/trace",
    "bevy/trace_chrome",
    "bevy/track_location",
    "bevy/type_label_buffers",
]
ci = ["bevy/bevy_ci_testing"]
webgpu = ["bevy/web", "bevy/webgpu", "bevy/web_asset_cache"]

# Sized for the wasm/Pages bundle (mirrors bevy-open-rts). No `strip = true`:
# it removes the wasm `target_features` section and wasm-opt then rejects the
# bulk-memory ops; wasm-opt -Oz already strips the output.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
